--- a/LatexTFG/Cascaras/agradecimientos.tex
+++ b/LatexTFG/Cascaras/agradecimientos.tex
@@ -54,19 +54,19 @@ Inicio de las Leyes Orgánicas. Juan Carlos I
 
 Fue en el segundo año de carrera, concretamente en la asignatura sistemas operativos, cuando tuvimos la oportunidad de conocer al que sería el director de nuestro trabajo de fin de grado. Joaquín Recas Piorno era el profesor encargado de impartir de forma presencial la asignatura.
 
-Nos fascinó desde un primer momento su forma de implicarse en el proceso de aprendizaje con el alumnado. Era tan contagiosa su pasión por la informática, que hacía crecer nuestro interés y curiosidad por la materia. Sin duda, uno de los profesores más instructivos y apasionados en su forma de explicar con los que hemos tenido la suerte de coincidir. Durante el transcurso de la asignatura de la cual él era docente, hemos de destacar que pasamos algo desapercibidos para él, incluso una vez terminada la asignatura. Aun así, estabamos deseosos de que en un futuro, pudiesemos ser alumnos suyos de nuevo en alguna asignatura de los dos años restantes de carrera. Lamentablemente, no fue así.
+Nos fascinó desde un primer momento su forma de implicarse en el proceso de aprendizaje con el alumnado. Era tan contagiosa su pasión por la informática, que hacía crecer nuestro interés y curiosidad por la materia. Sin duda, uno de los profesores más instructivos y apasionados en su forma de explicar con los que hemos tenido la suerte de coincidir. Durante el transcurso de la asignatura de la cual él era docente, hemos de destacar que pasamos algo desapercibidos para él, incluso una vez terminada la asignatura. Aun así, estábamos deseosos de que en un futuro, pudiésemos ser alumnos suyos de nuevo en alguna asignatura de los dos años restantes de carrera. Lamentablemente, no fue así.
 
-Durante el penúltimo año de carrera, habíamos tomado la decisión de plantearle ser el director de nuestro trabajo de fin de grado. Fue aun más fascinante para nosotros está decisión, cuando investigamos la temática de los trabajos que Joaquín había dirigido en los últimos años. Estabán intimamente relacionados con el campo de la medicina y la salud, justo la temática sobre la que estabamos seguros que nuestro proyecto trataría.
+Durante el penúltimo año de carrera, habíamos tomado la decisión de plantearle ser el director de nuestro trabajo de fin de grado. Fue aun más fascinante para nosotros está decisión, cuando investigamos la temática de los trabajos que Joaquín había dirigido en los últimos años. Estaban íntimamente relacionados con el campo de la medicina y la salud, justo la temática sobre la que estábamos seguros que nuestro proyecto trataría.
 
 Fue entonces, cuando ni siquiera habíamos terminado nuestro tercer año de carrera, cuando nos pusimos en contacto con él y le realizamos la propuesta de trabajar con él.
 
-Desde un primer momento se mostró totalmente colaborativo con nostros, además de mostrar un interés desmesurado por ayudarnos, aun sabiendo que poco o nada sabíamos de la materia sobre la que ibamos a realizar el proyecto. Así fue como comenzó el proyecto que en la presente memoria trata de ser ilustrado.
+Desde un primer momento se mostró totalmente colaborativo con nosotros, además de mostrar un interés desmesurado por ayudarnos, aun sabiendo que poco o nada sabíamos de la materia sobre la que íbamos a realizar el proyecto. Así fue como comenzó el trabajo que en la presente memoria trata de ser ilustrado.
 
-Sin duda, nuestro mayor agradecimiento es para Joaquín, por cedernos una enorme cantidad de su valioso tiempo, por su capacidad de ayudar desinteresadamente y por proporcionarnos todos los materiales necesarios para la consecución del proyecto. Fue él, el que nos facilitó todos los recursos tanto hardware, como software, tan necesarios para el proyecto. De no haber sido por él, y por las facilidades que nos ofreció en todo momento de forma entusiasta, el lector no podría ni si quiera leer estas líneas.
+Sin duda, nuestro mayor agradecimiento es para Joaquín, por cedernos una enorme cantidad de su valioso tiempo, por su capacidad de ayudar desinteresadamente y por proporcionarnos todos los materiales necesarios para la consecución del proyecto. Fue él, el que nos facilitó todos los recursos tanto hardware, como software, tan necesarios para el trabajo que teníamos entre manos. De no haber sido por él, y por las facilidades que nos ofreció en todo momento de forma entusiasta, el lector no podría ni si quiera leer estas líneas.
 
-Queremos agradecer tambíen el altruista trabajo que realizaron tanto Marco Antonio, como Pedro Pablo Gómez Martín en el desarrollo de una plantilla \LaTeX\ específica para este tipo de trabajos, conocida como \texis\ \footnote{\href{http://gaia.fdi.ucm.es/research/texis}{http://gaia.fdi.ucm.es/research/texis}}. De no haber contado con esta plantilla, el tiempo de desarrollo de la presente memoria se habría multiplicado, no nos cabe duda. Nuestro ocio y vida social se lo agradecen a ambos.
+Queremos agradecer también el altruista trabajo que realizaron tanto Marco Antonio, como Pedro Pablo Gómez Martín en el desarrollo de una plantilla \LaTeX\ específica para este tipo de trabajos, conocida como \texis\ \footnote{\href{http://gaia.fdi.ucm.es/research/texis}{http://gaia.fdi.ucm.es/research/texis}}. De no haber contado con esta plantilla, el tiempo de desarrollo de la presente memoria se habría multiplicado, no nos cabe duda. Nuestro ocio y vida social se lo agradecen a ambos.
 
-Nuestros agradecimientos van dirigidos también al Dr. José Manuel Bote, cuyo aporte al proyecto ha sido fundamental para su éxitosa conclusión. Tanto la aplicación Android original, como un programa desarrollado en Python utilizado en el proyecto han sido desarrollados por él. 
+Nuestros agradecimientos van dirigidos también al Dr. José Manuel Bote, cuyo aporte al proyecto ha sido fundamental para su exitosa conclusión. Tanto la aplicación Android original, como un programa desarrollado en Python utilizado en el proyecto han sido desarrollados por él. 
 
 Agradecemos a Xavier Gallofré Nieva, Jesús F. López San José y Álvaro Pérez Liaño los esfuerzos que realizaron (con Joaquín como director también) en su proyecto de fin de grado, ya que su trabajo nos ha servido como referencia en determinadas ocasiones, debido a la similitud que presentan ambos proyectos.
 
