--- a/LatexTFG/Tesis.tex
+++ b/LatexTFG/Tesis.tex
@@ -118,6 +118,8 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 \include{Cascaras/dedicatoria}
 
+\include{Cascaras/autorizacion}
+
 \include{Cascaras/agradecimientos}
 
 \include{Cascaras/resumen}
